<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:gravity="end"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/white"
            android:background="@color/black"
            android:padding="10dp"/>
        <EditText
            android:layout_below="@+id/infoTextView"
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:enabled="false"
            android:gravity="end"
            android:lines="2"
            android:maxLines="2"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/white"
            android:background="@color/black"
            android:padding="10dp"
            android:importantForAutofill="no"
            tools:ignore="LabelFor"/>

        <GridLayout
            android:layout_below="@+id/editText"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="5"
            android:columnCount="4">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:textSize="49sp"
                android:text="@string/c"
                android:layout_columnSpan="2"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_columnWeight="1"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_row="0"
                android:layout_column="0"/>
            <Button
                android:id="@+id/btnPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percentsign"
                android:padding="30dp"
                android:textSize="49sp"
                android:layout_columnWeight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_row="0"
                android:layout_column="2"/>
            <Button
                android:id="@+id/btnDivision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/divideSign"
                android:textSize="49sp"
                android:padding="30dp"
                android:layout_columnWeight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_row="0"
                android:layout_column="3"/>
            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:text="@string/_7"
                android:layout_columnWeight="1"
                android:textSize="49sp"
                android:textColor="@color/white"
                android:background="@color/black"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_row="1"
                android:layout_column="0"/>
            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:textSize="49sp"
                android:layout_columnWeight="1"
                android:padding="30dp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed-light"
                android:background="@color/black"
                android:layout_row="1"
                android:layout_column="1"/>
            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:textSize="49sp"
                android:layout_columnWeight="1"
                android:padding="30dp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed-light"
                android:background="@color/black"
                android:layout_row="1"
                android:layout_column="2"/>
            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplysign"
                android:textSize="49sp"
                android:layout_columnWeight="1"
                android:textColor="@color/white"
                android:padding="30dp"
                android:background="@color/black"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_row="1"
                android:layout_column="3"/>
            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:padding="30dp"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:layout_columnWeight="1"
                android:textSize="49sp"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_row="2"
                android:layout_column="0"/>
            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:textSize="49sp"
                android:layout_columnWeight="1"
                android:padding="30dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_row="2"
                android:layout_column="1"/>
            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:textSize="49sp"
                android:layout_columnWeight="1"
                android:padding="30dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_row="2"
                android:layout_column="2"/>
            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minussign"
                android:textSize="49sp"
                android:padding="30dp"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_columnWeight="1"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_row="2"
                android:layout_column="3"/>
            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:layout_columnWeight="1"
                android:padding="30dp"
                android:textSize="49sp"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_row="3"
                android:layout_column="0"/>
            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:textSize="49sp"
                android:padding="30dp"
                android:layout_columnWeight="1"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed-light"
                android:background="@color/black"
                android:layout_row="3"
                android:layout_column="1"/>
            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:textSize="49sp"
                android:layout_columnWeight="1"
                android:padding="30dp"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_row="3"
                android:layout_column="2"/>
            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plussign"
                android:textSize="49sp"
                android:layout_columnWeight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:padding="30dp"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_row="3"
                android:layout_column="3"/>

            <Button
                android:id="@+id/btnDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dotsign"
                android:textSize="49sp"
                android:padding="30dp"
                android:layout_columnWeight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:textColor="@color/white"
                android:background="@color/black"
                android:layout_row="4"
                android:layout_column="0"/>
            <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_columnWeight="1"
            android:textSize="49sp"
            android:textColor="@color/white"
                android:layout_columnSpan="2"
            android:background="@color/black"
            android:padding="30dp"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_row="4"
            android:layout_column="1"/>
            <Button
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eqsign"
                android:fontFamily="sans-serif-condensed-light"
                android:padding="30dp"
                android:textSize="49sp"
                android:layout_columnWeight="1"
                android:textColor="@color/white"
                android:background="@color/orange"
                android:layout_row="4"
                android:layout_column="3"/>

        </GridLayout>
    </RelativeLayout>
</layout>